# stac-transaction-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-esgvoc  README.md  compose-kafka.yaml  compose.yaml  pyproject.toml  requirements.txt  test_item.json
.github/workflows/: build-and-deploy.yml  pre-commit.yaml
cmip6/v1.0.0/: schema.json
cmip6/v1.0.1/: schema.json
cmip6/v2.0.0/: schema.json
cmip6/v3.0.1/: schema.json
cmip6/v3.0.2/: schema.json
cmip6/v3.0.3/: schema.json
cmip6/v3.0.3.1/: schema.json
cmip6/v3.0.4/: schema.json
cmip6plus/1.1.0/: schema.json
cmip6plus/v1.0.1/: schema.json
cmip6plus/v1.0.4/: schema.json
cmip6plus/v1.1.0/: schema.json
cmip6plus/v2.0.0/: schema.json
cmip7/1.2.3/: schema.json
cmip7/v1.0.0/: schema.json
cmip7/v1.0.1/: schema.json
cmip7/v1.2.3/: schema.json
cmip7/v1.2.6/: schema.json
cmip7/v1.2.7/: schema.json
cmip7/v1.2.8/: schema.json
cmip7/v3.0.1/: schema.json
cmip7/v3.0.2/: schema.json
cmip7/v3.0.4/: schema.json
cmip7/v3.0.5/: schema.json
cmip7/v3.0.6/: schema.json
cordex-cmip6/1.2.1/: schema.json
cordex-cmip6/v1.2.1/: schema.json
cordex-cmip6/v1.2.2/: schema.json
cordex-cmip6/v3.1.0/: schema.json
cordex-cmip6/v3.1.1/: schema.json
cordex-cmip6/v3.1.2/: schema.json
ecs/: task-definition.json
input4mips/v3.0.0/: schema.json
obs4mips/v1.0.0/: schema.json
obs4ref/v1.0.1/: schema.json
schemas/: esgfng_publish_event.json  post_event_example.json  publish_event.json
scripts/: Dockerfile  build-api.sh  build-esgvoc.sh  build.sh  confluent.repo  create-secrets.sh  deploy-esgvoc.sh  deploy.sh  globus_setup.py  run-local.sh  taskDefinition.json
scripts/ksqldb/: create_esgfng_flat_stream.sql  create_esgfng_stream.sql  create_esgfng_stream_flat.sql
src/: api.py  api_settings.py  authorizer.py  client.py  ingest.py  kafka.py  models.py  producer.py  routes.py  settings.py  test_api.py  types.py  utils.py
src/authorizer/: __init__.py  egi_authorizer.py  globus_auth.py  globus_authorizer.py
src/settings/: __init__.py  ceda.py  example.env  globus.py  local.py  production.py  transaction.py
src/settings/config/: CMIP6ItemModel.py  access_control_policy.json  access_control_policy.txt
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars  tfplan.integration  variables.tf
terraform/modules/cluster/: main.tf  outputs.tf  variables.tf
terraform/modules/ecr/: main.tf  variables.tf
terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/secrets/: main.tf  outputs.tf  variables.tf
terraform/modules/service/: main.tf  outputs.tf  variables.tf
test/: East-CMIP6-paths-0001-0500.txt  East-CMIP6-paths-0501-1000.txt  East-CMIP6-paths-1001-1500.txt  East-CMIP6-paths-1501-2000.txt  East-CMIP6-paths-2001-2500.txt  East-obs4MIPs-paths-1-84.txt  README.md  West-CMIP6-paths-0501-1000.txt  West-CMIP6-paths-1001-1500.txt  West-CMIP6-paths-1501-2000.txt  West-CMIP6-paths-2001-2500.txt  West-obs4MIPs-paths-1-84.txt  data_challenge.py  esgf.py  esgfng.py  fetch_100k_cmip6.sh  fetch_esgf_cmip6.py  generate_payloads.py  schema.json  settings.py  stac_client.py
