[project]
name = "stac-transaction-api"
requires-python = ">=3.12,<4.0"
description = "ESGF STAC Transaction API"
version = "0.2.0"
authors = [
    {"name" = "Lukasz Lacinski", "email" = "lukasz@uchicago.edu"},
    {"name" = "Steve Turoscy", "email" = "sturoscy@uchicago.edu"},
    ]
readme = "README.md"
dependencies = [
    "esgf-core-utils>=1.1.0",
    "fastapi>=0.114.0",
    "jsonschema>=4.24.0",
    "packaging>=26.2",
    "shapely>=2.1.2",
    "stac-fastapi.types>=6.3.0",
    "stac-fastapi.extensions>=6.3.0",
    "uvicorn>=0.46.0",
]

[dependency-groups]
ceda = [
    "httpx>=0.28.1",
    "httpx-auth>=0.23.1",
    "confluent-kafka>=2.12.1",
    "pydantic>=2.12"
]
globus = [
    "boto3==1.43.6",
    "globus-sdk==3.62.0",
    "pyjwt==2.12.1",
]
test = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]

[tool.poetry]
packages = [
    { include = "src" }
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
